Got tokenAuth working

--- a/app/views/authentication/login.html
+++ b/app/views/authentication/login.html
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="small-12 columns small-centered">
-		Email: <input type="text" data-bind="textInput: login">
+		Email: <input type="text" data-bind="textInput: email">
 		Password: <input type="password" data-bind="textInput: password">
-		<button data-bind="click: doLogin">Login</button>
+		<button data-bind="click: login">Login</button>
 	</div>
 </div>
