--- a/app/views/authentication/new.html
+++ b/app/views/authentication/new.html
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="small-12 columns small-centered">
-		User: <input type="text" data-bind="textInput: login">
+		User: <input type="text" data-bind="textInput: email">
 		Password: <input type="password" data-bind="textInput: password">
-		<button data-bind="click: doLogin">Create User</button>
+		<button data-bind="click: createUser">Create User</button>
 	</div>
 </div>
