--- a/app/views/authentication/login.html
+++ b/app/views/authentication/login.html
@@ -1,7 +1,9 @@
 <div class="row">
 	<div class="small-12 columns small-centered">
-		Email: <input type="text" data-bind="textInput: email">
-		Password: <input type="password" data-bind="textInput: password">
-		<button data-bind="click: login">Login</button>
+		<form data-bind="submit: login">
+			Email: <input type="text" data-bind="textInput: email">
+			Password: <input type="password" data-bind="textInput: password">
+			<button data-bind="click: login">Login</button>
+		</form>
 	</div>
 </div>
