--- a/app/views/beers/searchResults.html
+++ b/app/views/beers/searchResults.html
@@ -1,3 +1,17 @@
 <div>
+	<div class="small-12 columns">
+		<h4 class="raleway">
+			Search Results for: <span data-bind="text: searchText"></span>
+		</h4>
+	</div>
 
+	<!-- ko foreach: results -->
+		<div data-bind="template: { name: beerResult }"></div>
+	<!-- /ko -->
+
+	<script type="text/html" id="beerResult">
+		<div class="small-12 columns">
+			
+		</div>
+	</script>
 </div>
