--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,15 +1,15 @@
 <div class="landing-page">
-	<div class="small-4 columns panel main-panel small-centered">
+	<div class="small-12 medium-8 large-5 columns panel main-panel small-centered">
 		<h2 class="raleway logo">
 			<span class="beer">Beer</span>
 			<span class="bonder">Bonder</span>
 		</h2>
 		<form data-bind="submit: findBeer">
 			<div class="row collapse">
-				<div class="small-9 columns">
+				<div class="small-6 medium-8 columns">
 					<input class="prefix" type="text" data-bind="textInput: searchText" />
 				</div>
-				<div class="small-3 columns">
+				<div class="small-6 medium-4 columns">
 					<button class="primary postfix" data-bind="click: findBeer">Find Beer</button>
 				</div>
 			</div>
