Beer search now works

--- a/app/views/beers/searchResults.html
+++ b/app/views/beers/searchResults.html
@@ -1,17 +1,43 @@
-<div>
+<div class="small-12 medium-8 columns small-centered">
 	<div class="small-12 columns">
 		<h4 class="raleway">
-			Search Results for: <span data-bind="text: searchText"></span>
+			Search Results for: <span data-bind="text: searchTerm"></span>
 		</h4>
 	</div>
 
 	<!-- ko foreach: results -->
-		<div data-bind="template: { name: beerResult }"></div>
+		<div data-bind="template: { name: 'beerResult', data: $data }"></div>
 	<!-- /ko -->
 
 	<script type="text/html" id="beerResult">
-		<div class="small-12 columns">
-			
+		<div class="small-12 columns beer-search-result-container">
+			<div class="small-12 medium-2 columns">
+				<img class="beer-label-small" data-bind="attr: { src: $data.beer.beer_label }">
+			</div>
+			<div class="small-12 medium-10 columns">
+				<div class="row">
+					<div class="small-12 columns">
+						{{ $data.beer.beer_name }}
+					</div>
+				</div>
+				<div class="row">
+					<div class="small-12 columns">
+						{{ $data.beer.beer_style }}
+					</div>
+				</div>
+				<div class="row">
+					<div class="small-12 columns">
+						<a data-bind="attr: { href: $data.brewery.contact.url }">
+							{{ $data.brewery.brewery_name }}
+						</a>
+					</div>
+				</div>
+				<div class="row">
+					<div class="small-12 columns">
+						{{ $data.beer.beer_abv }}% ABV
+					</div>
+				</div>
+			</div>
 		</div>
 	</script>
 </div>
