--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,7 +7,7 @@
 		<form data-bind="submit: findBeer">
 			<div class="row collapse">
 				<div class="small-6 medium-8 columns">
-					<input class="prefix" type="text" data-bind="textInput: searchText" />
+					<input class="prefix" type="text" data-bind="textInput: searchTerm" />
 				</div>
 				<div class="small-6 medium-4 columns">
 					<button class="primary postfix" data-bind="click: findBeer">Find Beer</button>
