--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -43,6 +43,16 @@
 		}
 	}
 
+	.beer-label-small {
+		height: 125px;
+		width: 125px;
+	}
+
+	.beer-search-result-container {
+		margin-bottom: 10px;
+		// border: 1px solid #e6e6e6;
+	}
+
 	.landing-page {
 		background: rgba(0, 0, 0, 0.65);
 		height: 100%;
