Styled search results

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -20,8 +20,20 @@
 		margin-left: 5px;
 	}
 
+	/* =================
+		Google Fonts 
+	==================*/
+
 	.raleway{
 		font-family: 'Raleway', sans-serif;
+	}
+
+	.lora{
+		font-family: 'Lora', serif;
+	}
+
+	.bold {
+		font-weight: bold;
 	}
 
 	.main-panel{
