--- a/app/views/beers/searchResults.html
+++ b/app/views/beers/searchResults.html
@@ -1,4 +1,27 @@
 <div class="small-12 medium-8 columns small-centered">
+	<!-- ko if: linkBeer1() || linkBeer2() -->
+	<div class="small-12 columns">
+
+		<div class="small-12 medium-5 columns">
+			<!-- ko if: linkBeer1() -->
+				<div data-bind="template: { name: 'beerData', data: linkBeer1() }"></div>
+			<!-- /ko -->
+		</div>
+
+		<div class="show-for-medium-up medium-2 columns">
+			<i class="fa fa-long-arrow-right"></i>
+		</div>
+		<div class="show-for-small-only small-12 columns">
+			<i class="fa fa-chevron-down"></i>
+		</div>
+		<div class="small-12 medium-5 columns">
+			<!-- ko if: linkBeer2() -->
+				<div data-bind="template: { name: 'beerData', data: linkBeer2() }"></div>
+			<!-- /ko -->
+		</div>
+	</div>
+	<!-- /ko -->
+
 	<div class="small-12 columns search-results-search-input">
 		<form data-bind="submit: searchAgain">
 			<div class="row collapse">
@@ -31,17 +54,19 @@
 	<script type="text/html" id="beerResult">
 		<div class="small-12 columns beer-search-result-container">
 			
-			<div data-bind="template: { name: 'beerData', data: $data }"></div>
+			<div class="small-12 medium-7 columns" data-bind="template: { name: 'beerData', data: $data }"></div>
 
-			<div class="small-12 medium-3 columns">
+			<div class="small-12 medium-5 columns">
 				<div class="row">
 					<div class="small-12 columns">
-						View Beer Bonds
+						<a data-bind="click: $root.linkBeer">
+							<button class="tiny primary">Link This Beer</button>
+						</a>
 					</div>
 				</div>
 				<div class="row">
 					<div class="small-12 columns">
-						Link This Beer
+						<button class="tiny secondary">View Beer Bonds</button>
 					</div>
 				</div>
 			</div>
@@ -49,7 +74,7 @@
 	</script>
 
 	<script type="text/html" id="beerData">
-		<div class="small-12 medium-2 columns">
+		<div class="small-12 medium-5 columns">
 			<img class="beer-label-small" data-bind="attr: { src: $data.beer.beer_label }">
 		</div>
 		<div class="small-12 medium-7 columns">
