Styled linkBeer1 and 2

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -21,6 +21,19 @@
 		margin-left: 5px;
 	}
 
+	.display-flex {
+		display: flex;
+	}
+
+	.flex {
+		flex: 1;
+	}
+
+	.icon-middle {
+		margin-top: 50%;
+    	margin-left: 50%;
+	}
+
 	/* =================
 		Google Fonts 
 	==================*/
