--- a/app/views/beers/searchResults.html
+++ b/app/views/beers/searchResults.html
@@ -1,6 +1,6 @@
 <div class="small-12 medium-8 columns small-centered">
 	<!-- ko if: linkBeer1() || linkBeer2() -->
-	<div class="small-12 columns">
+	<div class="small-12 columns display-flex">
 
 		<div class="small-12 medium-5 columns">
 			<!-- ko if: linkBeer1() -->
@@ -8,8 +8,8 @@
 			<!-- /ko -->
 		</div>
 
-		<div class="show-for-medium-up medium-2 columns">
-			<i class="fa fa-long-arrow-right"></i>
+		<div class="show-for-medium-up medium-2 columns flex">
+			<h1><i class="fa fa-long-arrow-right icon-middle"></i></h1>
 		</div>
 		<div class="show-for-small-only small-12 columns">
 			<i class="fa fa-chevron-down"></i>
