Everything up to the bonds

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -83,6 +83,10 @@
 		margin-top: 10px;
 	}
 
+	.link-beer-container {
+		margin-top: 15px;
+	}
+
 	.landing-page {
 		background: rgba(0, 0, 0, 0.65);
 		height: 100%;
