ForceChart is working but needs to convert obj to array

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,4 +1,4 @@
-<div class="landing-page">
+<div class="landing-page" data-bind="forceChart: forceChartSettings">
 	<div class="small-12 medium-8 large-5 columns panel main-panel small-centered">
 		<h2 class="raleway logo">
 			<span class="beer">Beer</span>
