--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -91,5 +91,13 @@
 		background: rgba(0, 0, 0, 0.65);
 		height: 100%;
 		width: 100%;
+
+		svg {
+			position: absolute;
+		    top: 0px;
+		    left: 0px;
+		    margin-top: 0;
+		    z-index: -1;
+		}
 	}
 }
